Added Flickr plugin.

--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,9 @@ author :
   twitter : robertocarroll
   feedburner : feedname
 
+  flickr:
+  api_key: 8b3fc7bec6daef3f7a0293b25c635c1f
+
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
 # Most places will/should use BASE_PATH to make the urls
