Fixed up the recently template.

--- a/_data/month_reports.yml
+++ b/_data/month_reports.yml
@@ -1,9 +1,9 @@
-- date: 06-14
+- date: 04-15
   summary: write what happened in this month
-  prev_goal: something
-  new_goal: something else
+  prev_goal: Just getting started with this idea
+  new_goal: Write morning pages. 
 
-- date: 05-14
-  summary: write what happened in this month
-  prev_goal: something
-  new_goal: something else
+- date: 06-14
+  summary: Solstice adventure up Black Hill. Work was mostly about TAQA and the ICC. I went to The Hague once. 
+  prev_goal:
+  new_goal:
