Updates to recently posts.

--- a/_data/month_reports.yml
+++ b/_data/month_reports.yml
@@ -3,7 +3,27 @@
   prev_goal: Just getting started with this idea
   new_goal: Write morning pages. 
 
+- date: 02-15
+  summary: 'Went to Oslo' 
+  prev_goal:
+  new_goal:
+
+- date: 12-14
+  summary: 'Went to Athens' 
+  prev_goal:
+  new_goal:
+
+- date: 07-14
+  summary: 'The Tour de France came through our village on Sunday 6 July. Work involved finishing off TAQA and setting up a couple of things for September, but mostly it was winding down for the summer break.' 
+  prev_goal:
+  new_goal:
+
 - date: 06-14
   summary: Solstice adventure up Black Hill. Work was mostly about TAQA and the ICC. I went to The Hague once. 
+  prev_goal:
+  new_goal:
+
+- date: 05-14
+  summary: 'Went to Lyon to see Kraftwerk. Work was mostly about TAQA. Had two jobs interviews at different news organisations.' 
   prev_goal:
   new_goal:
