Lots of text edits.

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ tagline:             The writing and design of Robert Carroll
 url:                 http://robertocarroll.com
 baseurl:             /
 job_description: "writer, designer and programmer"
-description: "a tiny digital design and development studio called <a href='http://wearethoughtfox.com/'>We Are Thought Fox</a>"
+description: "a tiny design and development studio called <a href='http://wearethoughtfox.com/'>We Are Thought Fox</a>"
 
 # Assets
 #
