--- a/_data/month_reports.yml
+++ b/_data/month_reports.yml
@@ -1,6 +1,6 @@
 - date: 04-15
-  summary: write what happened in this month
-  prev_goal: Just getting started with this idea
+  summary: Lots of birthdays. Spent a couple of weeks on the west coast of France.   
+  prev_goal: 'Just getting started with this idea, so no goal last month.'
   new_goal: Write morning pages. 
 
 - date: 02-15
@@ -14,7 +14,7 @@
   new_goal:
 
 - date: 07-14
-  summary: 'The Tour de France came through our village on Sunday 6 July. Work involved finishing off TAQA and setting up a couple of things for September, but mostly it was winding down for the summer break.' 
+  summary: 'The Tour de France came through our village on Sunday 6 July. Work involved finishing off the TAQA project and setting up a couple of things for September, but mostly it was winding down for the summer break.' 
   prev_goal:
   new_goal:
 
