Optimised images using imageoptim.

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title:               Robert Carroll
 tagline:             The writing and design of Robert Carroll
 url:                 http://robertocarroll.com
 baseurl:             /
-job_description: "writer, designer and programmer"
+job_description: "writer, designer and web developer"
 description: "a tiny design and development studio called <a href='http://wearethoughtfox.com/'>We Are Thought Fox</a>"
 
 # Assets
