Added recently for MAy 2015.

--- a/_data/month_reports.yml
+++ b/_data/month_reports.yml
@@ -1,7 +1,12 @@
+- date: 05-15
+  summary: 'A varied month. Not working particularly hard, but lots of things going on. I worked at The Sun for a few days. Caught up with lovely people in London. Stayed on an island in Twickenham and a sofa in Shoreditch. The Hepworth Challenge rumbled on as did the Barjeel app. Henry Moore at the Sculpture park was OK, but not amazing. The Sing-a-long Sound of Music was remarkable: nuns clutching pints, many interjections and acting out; best bit of theatre in years.'  
+  prev_goal: 'HIT. Wrote morning pages on 20 days this month.'
+  new_goal: 'Get going on the book. Not just research and structure, but writing at least 500 words on more than 12 days.'  
+
 - date: 04-15
   summary: Lots of birthdays. Spent a couple of weeks on the west coast of France.   
   prev_goal: 'Just getting started with this idea, so no goal last month.'
-  new_goal: Write morning pages. 
+  new_goal: Write morning pages on over half the days of the month. 
 
 - date: 02-15
   summary: 'Went to Oslo' 
