--- a/_data/month_reports.yml
+++ b/_data/month_reports.yml
@@ -1,3 +1,8 @@
+- date: 06-15
+  summary: 'Finished up the Hepworth project at the start of the month. Barjeel app lingers on. Work on a few possible projects. Did a HacksHackers Manchester meetup on Git and Github. Wrote a few blog posts which no-one read.'  
+  prev_goal: 'MISS. No words. Only research, structure and procrastination.'
+  new_goal: 'Try again: write at least 500 words on more than 12 days.'  
+
 - date: 05-15
   summary: 'A varied month. Not working particularly hard, but lots of things going on. I worked at The Sun for a few days. Caught up with lovely people (Tom and Fedon) in London. Stayed on an island in Twickenham and a sofa in Shoreditch. The Hepworth Challenge rumbled on as did the Barjeel app. Henry Moore at the Sculpture park was OK, but not amazing. Anthony and family dropped in. The Sing-a-long Sound of Music was remarkable: nuns clutching pints, many interjections and acting out; best bit of theatre in years.'  
   prev_goal: 'HIT. Wrote morning pages on 20 days this month.'
