Such a messy commit. Oops. Got out of the habit of commiting and made lots of odd content and structure changes. Includes adding some planning docs, Sept recently and first attempt at cleaning up the SCSS files.

--- a/_data/month_reports.yml
+++ b/_data/month_reports.yml
@@ -1,3 +1,8 @@
+- date: 09-15
+  summary: "Back after a six weeks away in Europe. Not the clear and clean start I've got used to after the summer, but a few interesting work things are starting to take shape. Stayed in a beach hut at Hengistbury Head near Bournmouth. Thanks April! Trips to Hathersage Lido and the Yorkshire Sculpture Park. My birthday involved a cake piled with chocolates and edged with Kit Kats."    
+  prev_goal: "MISS. But getting closer. I managed five days writing 500 words per day (<a href='#writing-progress'>see chart</a>)."
+  new_goal: 'Try again, but bring it down a bit: write at least 500 words 10 days or more. Also October is going to be a dry (no alcohol) month.'  
+
 - date: 06-15
   summary: 'Finished up the Hepworth project at the start of the month. Barjeel app lingers on. Work on a few possible projects. Did a HacksHackers Manchester meetup on Git and Github. Wrote a few blog posts which no-one read.'  
   prev_goal: 'MISS. No words. Only research, structure and procrastination.'
