Lots of moving around and cleaning up. Added Oct 2015 recently.

--- a/_data/month_reports.yml
+++ b/_data/month_reports.yml
@@ -1,44 +1,49 @@
+- date: 10-15
+  summary: "An odd month where I suddenly woke up to the pressures of earning money again. Not necessarily due to lack of money, but more to thinking about and trying to get new projects which cropped up. It really threw me off the slowly emerging rhythm that had been building up and I need to regain focus — reestablish the things I want to achieve and do those things quickly and often."
+  prev_goal: "MISS. I didn't have a drink until 22 October and I didn't write at all."
+  new_goal: 'Keep trying: write at least 500 words 10 days or more.'
+
 - date: 09-15
-  summary: "Back after a six weeks away in Europe. Not the clear and clean start I've got used to after the summer, but a few interesting work things are starting to take shape. Stayed in a beach hut at Hengistbury Head near Bournmouth. Thanks April! Trips to Hathersage Lido and the Yorkshire Sculpture Park. My birthday involved a cake piled with chocolates and edged with Kit Kats."    
+  summary: "Back after a six weeks away in Europe. Not the clear and clean start I've got used to after the summer, but a few interesting work things are starting to take shape. Stayed in a beach hut at Hengistbury Head near Bournmouth. Thanks April! Trips to Hathersage Lido and the Yorkshire Sculpture Park. My birthday involved a cake piled with chocolates and edged with Kit Kats."
   prev_goal: "MISS. But getting closer. I managed five days writing 500 words per day (<a href='#writing-progress'>see chart</a>)."
-  new_goal: 'Try again, but bring it down a bit: write at least 500 words 10 days or more. Also October is going to be a dry (no alcohol) month.'  
+  new_goal: 'Try again, but bring it down a bit: write at least 500 words 10 days or more. Also October is going to be a dry (no alcohol) month.'
 
 - date: 06-15
-  summary: 'Finished up the Hepworth project at the start of the month. Barjeel app lingers on. Work on a few possible projects. Did a HacksHackers Manchester meetup on Git and Github. Wrote a few blog posts which no-one read.'  
+  summary: 'Finished up the Hepworth project at the start of the month. Barjeel app lingers on. Work on a few possible projects. Did a HacksHackers Manchester meetup on Git and Github. Wrote a few blog posts which no-one read.'
   prev_goal: 'MISS. No words. Only research, structure and procrastination.'
-  new_goal: 'Try again: write at least 500 words on more than 12 days.'  
+  new_goal: 'Try again: write at least 500 words on more than 12 days.'
 
 - date: 05-15
-  summary: 'A varied month. Not working particularly hard, but lots of things going on. I worked at The Sun for a few days. Caught up with lovely people (Tom and Fedon) in London. Stayed on an island in Twickenham and a sofa in Shoreditch. The Hepworth Challenge rumbled on as did the Barjeel app. Henry Moore at the Sculpture park was OK, but not amazing. Anthony and family dropped in. The Sing-a-long Sound of Music was remarkable: nuns clutching pints, many interjections and acting out; best bit of theatre in years.'  
+  summary: 'A varied month. Not working particularly hard, but lots of things going on. I worked at The Sun for a few days. Caught up with lovely people (Tom and Fedon) in London. Stayed on an island in Twickenham and a sofa in Shoreditch. The Hepworth Challenge rumbled on as did the Barjeel app. Henry Moore at the Sculpture park was OK, but not amazing. Anthony and family dropped in. The Sing-a-long Sound of Music was remarkable: nuns clutching pints, many interjections and acting out; best bit of theatre in years.'
   prev_goal: 'HIT. Wrote morning pages on 20 days this month.'
-  new_goal: 'Get going on the book. Not just research and structure, but writing at least 500 words on more than 12 days.'  
+  new_goal: 'Get going on the book. Not just research and structure, but writing at least 500 words on more than 12 days.'
 
 - date: 04-15
-  summary: Lots of birthdays. Spent a couple of weeks on the west coast of France.   
+  summary: Lots of birthdays. Spent a couple of weeks on the west coast of France.
   prev_goal: 'Just getting started with this idea, so no goal last month.'
-  new_goal: Write morning pages on over half the days of the month. 
+  new_goal: Write morning pages on over half the days of the month.
 
 - date: 02-15
-  summary: 'Went to Oslo' 
+  summary: 'Went to Oslo'
   prev_goal:
   new_goal:
 
 - date: 12-14
-  summary: 'Went to Athens' 
+  summary: 'Went to Athens'
   prev_goal:
   new_goal:
 
 - date: 07-14
-  summary: 'The Tour de France came through our village on Sunday 6 July. Work involved finishing off the TAQA project and setting up a couple of things for September, but mostly it was winding down for the summer break.' 
+  summary: 'The Tour de France came through our village on Sunday 6 July. Work involved finishing off the TAQA project and setting up a couple of things for September, but mostly it was winding down for the summer break.'
   prev_goal:
   new_goal:
 
 - date: 06-14
-  summary: Solstice adventure up Black Hill. Work was mostly about TAQA and the ICC. I went to The Hague once. 
+  summary: Solstice adventure up Black Hill. Work was mostly about TAQA and the ICC. I went to The Hague once.
   prev_goal:
   new_goal:
 
 - date: 05-14
-  summary: 'Went to Lyon to see Kraftwerk. Work was mostly about TAQA. Had two jobs interviews at different news organisations.' 
+  summary: 'Went to Lyon to see Kraftwerk. Work was mostly about TAQA. Had two jobs interviews at different news organisations.'
   prev_goal:
   new_goal:
