Moved a load of files around to help with planning and organisation.

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,20 @@ baseurl:             /
 job_description: "writer, designer and technologist"
 description: "a tiny design and development studio called <a href='http://wearethoughtfox.com/'>We Are Thought Fox</a>"
 
+# Setup
+navigation:
+  - title: work
+    url: /work/
+  - title: about
+    url: /about/
+  - title: writing
+    url: /writing/
+  - title: reading
+    url: /reading/
+  - title: journal
+    url: /journal/
+
+
 # Assets
 #
 # We specify the directory for Jekyll so we can use @imports.
