--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ permalink:           /:categories/:title/
 # Setup
 title:               Robert Carroll
 tagline:             The writing and design of Robert Carroll
-url:                 http://robertocarroll.com
+url:                 https://robertocarroll.com
 baseurl:             /
 job_description: "writer, designer and technologist"
 description: "a tiny design and development studio called <a href='http://wearethoughtfox.com/'>We Are Thought Fox</a>"
