Added some recently later-posts.

--- a/_data/month_reports.yml
+++ b/_data/month_reports.yml
@@ -1,5 +1,25 @@
+- date: 04-17
+  summary: "Things have settled down a bit at work. Not as strange as it was earlier in the year. Normalisation? Everyone has been in Abu Dhabi since Christmas and have to return to the UK after Easter."
+  prev_goal: "HIT. The novella is going well. Word count is over 10,000."
+  new_goal: 'Keep trying: write at least 500 words 10 days or more.'
+
+- date: 02-16
+  summary: "Working on the alpha for the WorldSkills Abu Dhabi website. Astrid wrote a song on a Saturday afternoon."
+  prev_goal:
+  new_goal:
+
+- date: 02-16
+  summary: "Working on the alpha for the WorldSkills Abu Dhabi website. Astrid wrote a song on a Saturday afternoon."
+  prev_goal:
+  new_goal:
+
+- date: 01-16
+  summary: "Started a new project for the WorldSkills Abu Dhabi website. The discovery phase is full of hope!"
+  prev_goal:
+  new_goal:
+
 - date: 10-15
-  summary: "An odd month where I suddenly woke up to the pressures of earning money again. Not necessarily due to lack of money, but more to thinking about and trying to get new projects which cropped up. It really threw me off the slowly emerging rhythm that had been building up and I need to regain focus — reestablish the things I want to achieve and do those things quickly and often."
+  summary: "A new arrival: Otto Felix Carroll. We're outnumbered now! Perhaps it's related but I also suddenly woke up to the pressures of earning money again. Not necessarily due to lack of money, but more to thinking about and trying to get new projects which cropped up. It really threw me off the slowly emerging rhythm that had been building up and I need to regain focus — reestablish the things I want to achieve and do those things quickly and often."
   prev_goal: "MISS. I didn't have a drink until 22 October and I didn't write at all."
   new_goal: 'Keep trying: write at least 500 words 10 days or more.'
 
