Update home and about

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title:               Robert Carroll
 tagline:             The writing and design of Robert Carroll
 url:                 https://www.robertocarroll.com
 job_description:     "writer, designer and technologist"
-description:         "a tiny design and development studio called <a href='http://wearethoughtfox.com/'>We Are Thought Fox</a>"
+description:         "a tiny design and development studio called <a href='https://www.wearethoughtfox.com/'>We Are Thought Fox</a>"
 
 # Assets
 #
