--- a/admin/config.yml
+++ b/admin/config.yml
@@ -21,6 +21,6 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Excerpt", name: "excerpt", widget: "markdown"}
       - {label: "Categories", name: "categories", widget: "string"}
       - {label: "Tags", name: "tags", widget: "string"}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Body", name: "body", widget: "text"}
     meta: # Meta data fields. Just like fields, but without any preview element
       - {label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD hh:mm:ss"}
