--- a/admin/config.yml
+++ b/admin/config.yml
@@ -19,8 +19,8 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Image", name: "top_image", widget: "image"}
       - {label: "Image caption", name: "top_image_caption", widget: "markdown"}
       - {label: "Excerpt", name: "excerpt", widget: "markdown"}
-      - {label: "Categories", name: "categories", widget: "string"}
-      - {label: "Tags", name: "tags", widget: "string"}
+      - {label: "Categories", name: "categories", widget: "list"}
+      - {label: "Tags", name: "tags", widget: "list"}
       - {label: "Body", name: "body", widget: "text"}
     meta: # Meta data fields. Just like fields, but without any preview element
       - {label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD hh:mm:ss"}
