--- a/admin/config.yml
+++ b/admin/config.yml
@@ -17,10 +17,10 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Layout", name: "layout", widget: "select", default: "post", options: ["post", "recently"]}
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
       - {label: "Image", name: "top_image", widget: "image"}
-      - {label: "Image caption", name: "top_image_caption", widget: "markdown"}
-      - {label: "Excerpt", name: "excerpt", widget: "markdown"}
+      - {label: "Image caption", name: "top_image_caption", widget: "text"}
+      - {label: "Excerpt", name: "excerpt", widget: "text"}
       - {label: "Categories", name: "categories", widget: "list"}
       - {label: "Tags", name: "tags", widget: "list"}
-      - {label: "Body", name: "body", widget: "text"}
+      - {label: "Body", name: "body", widget: "markdown"}
     meta: # Meta data fields. Just like fields, but without any preview element
       - {label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD hh:mm:ss"}
