--- a/admin/config.yml
+++ b/admin/config.yml
@@ -12,7 +12,7 @@ collections: # A list of collections the CMS should be able to edit
     folder: "_journal" # The path to the folder where the documents are stored
     sort: "date:desc" # Default is title:asc
     create: true # Allow users to create new documents in this collection
-    slug: "{{category}}-{{slug}}"
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields: # The fields each document in this collection have
       - {label: "Layout", name: "layout", widget: "select", default: "post", options: ["post", "recently"]}
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
