--- a/admin/config.yml
+++ b/admin/config.yml
@@ -35,5 +35,5 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Tags", name: "tags", widget: "list", required: false}
       - {label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD hh:mm:ss"}
-      - {label: "Layout", name: "layout", widget: "select", default: "quote"}
+      - {label: "Layout", name: "layout", widget: "hidden", default: "quote"}
 
