Tweak WATF description

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title:               Robert Carroll
 description:         The writing and design of Robert Carroll
 url:                 https://www.robertocarroll.com
 job_description:     "writer, designer and technologist"
-description:         "a digital studio called <a class='primary' href='https://www.wearethoughtfox.com/'>We Are Thought Fox</a>"
+description:         "a creative technology studio called <a class='primary' href='https://www.wearethoughtfox.com/'>We Are Thought Fox</a>"
 
 # Assets
 #
