--- a/admin/config.yml
+++ b/admin/config.yml
@@ -21,6 +21,14 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Excerpt", name: "excerpt", widget: "text", required: false}
       - {label: "Categories", name: "categories", widget: "list", required: false}
       - {label: "Tags", name: "tags", widget: "list", required: false}
+       - {
+          label: 'Publish Date',
+          name: 'date',
+          widget: 'datetime',
+          dateFormat: 'YYYY-MM-DD',
+          timeFormat: 'HH:mm',
+          format: 'YYYY-MM-DD HH:mm',
+        }
     meta: # Meta data fields. Just like fields, but without any preview element
       - {label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD hh:mm:ss"}
   - name: "scraps" # Used in routes, ie.: /admin/collections/:slug/edit
