--- a/admin/config.yml
+++ b/admin/config.yml
@@ -12,6 +12,7 @@ collections: # A list of collections the CMS should be able to edit
     create: true # Allow users to create new documents in this collection
     summary: '{{title}} - {{day}}/{{month}}/{{year}}'
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    sort: "date:desc"
     fields: # The fields each document in this collection have
       - {label: "Layout", name: "layout", widget: "select", default: "post", options: ["post", "recently"]}
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
@@ -29,8 +30,6 @@ collections: # A list of collections the CMS should be able to edit
           timeFormat: 'HH:mm',
           format: 'YYYY-MM-DD HH:mm',
         }
-    meta: # Meta data fields. Just like fields, but without any preview element
-      - {label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD hh:mm:ss"}
   - name: "scraps" # Used in routes, ie.: /admin/collections/:slug/edit
     label: "Scrapbook" # Used in the UI, ie.: "New Post"
     folder: "_scrapbook" # The path to the folder where the documents are stored
