Update journalism with featured

--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ defaults:
 navigation:
  - title: Work
    url: /work/
- - title: Writing
+ - title: Journalism
    url: /writing/
  - title: Blog
    url: /journal/
